Gensim Word2Vec
Gensim Word2Vec

--- a/Zero_shot_Learning/Notebook/20240701_ZSL_(Restart).ipynb
+++ b/Zero_shot_Learning/Notebook/20240701_ZSL_(Restart).ipynb
@@ -24,7 +24,13 @@
     "\n",
     "### Links\n",
     "\n",
-    "[Migrating-from-Gensim-3.x-to-4](https://github.com/piskvorky/gensim/wiki/Migrating-from-Gensim-3.x-to-4)"
+    "[Migrating-from-Gensim-3.x-to-4](https://github.com/piskvorky/gensim/wiki/Migrating-from-Gensim-3.x-to-4)\n",
+    "\n",
+    "[cub-200-2011_paper](https://paperswithcode.com/dataset/cub-200-2011)\n",
+    "\n",
+    "[cub-200-2011_dataset](https://www.kaggle.com/datasets/wenewone/cub2002011?resource=download)\n",
+    "\n",
+    "[Microsoft C++ Build Tools](https://visualstudio.microsoft.com/visual-cpp-build-tools/)"
    ]
   },
   {
@@ -229,9 +235,208 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db912ee6",
+   "metadata": {},
+   "source": [
+    "# Gensim Word2Vec\n",
+    "\n",
+    "### Using Gensim Word2Vec\n",
+    "\n",
+    "Here are the key steps to use Gensim Word2Vec:\n",
+    "\n",
+    "1. Training a Word2Vec Model on a Custom Corpus\n",
+    "2. Finding Similar Words\n",
+    "3. Computing Similarity Scores Between Words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6523c3c",
+   "metadata": {},
+   "source": [
+    "### 1. Training a Word2Vec Model on a Custom Corpus\n",
+    "\n",
+    "You can train a Word2Vec model on your custom corpus. Here is an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5af52a1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sentences : [['african_buffalo'], ['alligator'], ['amphibian'], ['amur_leopard'], ['ants'], ['bear'], ['bird'], ['blue_whale'], ['bobcat'], ['cat'], ['chimp'], ['chimpanzee'], ['cow'], ['dog'], ['dolphin'], [], ['eagle'], ['elephant'], ['fish'], ['frog'], ['giant'], ['giant_panda'], ['goat'], ['gorilla'], ['hen'], ['horse'], ['killer_whale'], ['lion'], ['lizard'], ['monkey'], ['mouse'], ['orangutan'], ['ostrich'], ['ox'], ['panda'], ['polar_bear'], ['rabbit'], ['rat'], ['rhino'], ['rhinoceros'], ['rhinoceroses'], ['seal'], ['sealskin'], ['siamese_cat'], ['skunk'], ['spider_monkey'], ['squirrel'], ['tiger'], ['turtle'], ['walrus'], ['whale'], ['bird'], ['fish'], ['lion'], ['tiger'], ['bull']] \n",
+      "\n",
+      "model : Word2Vec<vocab=51, vector_size=300, alpha=0.025> \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gensim.models import Word2Vec\n",
+    "from gensim.utils import simple_preprocess\n",
+    "\n",
+    "# Example sentences\n",
+    "sentences = [\n",
+    "    'african_buffalo', 'alligator', 'amphibian', 'amur_leopard', \n",
+    "    'ants', 'bear', 'bird', 'blue_whale', 'bobcat', 'cat', 'chimp', \n",
+    "    'chimpanzee', 'cow', 'dog', 'dolphin', 'domestic_water_buffalo', \n",
+    "    'eagle', 'elephant', 'fish', 'frog', 'giant', 'giant_panda', 'goat', \n",
+    "    'gorilla', 'hen', 'horse', 'killer_whale', 'lion', 'lizard', 'monkey', \n",
+    "    'mouse', 'orangutan', 'ostrich', 'ox', 'panda', 'polar_bear', 'rabbit', \n",
+    "    'rat', 'rhino', 'rhinoceros', 'rhinoceroses', 'seal', 'sealskin', \n",
+    "    'siamese_cat', 'skunk', 'spider_monkey', 'squirrel', 'tiger', 'turtle', \n",
+    "    'walrus', 'whale', 'bird', 'fish', 'lion', 'tiger', 'bull'\n",
+    "]\n",
+    "\n",
+    "# Preprocess sentences\n",
+    "sentences = [simple_preprocess(sentence) for sentence in sentences]\n",
+    "print(f\"sentences : {sentences} \\n\")\n",
+    "\n",
+    "# Train Word2Vec model\n",
+    "model = Word2Vec(sentences, vector_size=300, window=5, min_count=1, epochs=10000)\n",
+    "print(f\"model : {model} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c7817e4",
+   "metadata": {},
+   "source": [
+    "### 2. Finding Similar Words\n",
+    "\n",
+    "Once you have a trained model, you can find similar words using the most_similar method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "62fc0751",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most similar words to 'cat':\n",
+      "ants: 0.11463356018066406\n",
+      "goat: 0.10705526173114777\n",
+      "rhinoceros: 0.09309180825948715\n",
+      "monkey: 0.09122835099697113\n",
+      "rhino: 0.08179710805416107\n",
+      "rabbit: 0.07725443691015244\n",
+      "orangutan: 0.07632383704185486\n",
+      "bear: 0.07548326253890991\n",
+      "rhinoceroses: 0.06613056361675262\n",
+      "chimpanzee: 0.042745448648929596\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find similar words to 'cat'\n",
+    "similar_words = model.wv.most_similar('cat', topn=10)\n",
+    "print(\"Most similar words to 'cat':\")\n",
+    "for word, score in similar_words:\n",
+    "    print(f\"{word}: {score}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e920c777",
+   "metadata": {},
+   "source": [
+    "### 3. Computing Similarity Scores Between Words\n",
+    "\n",
+    "You can compute similarity scores between two words using the similarity method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f3dbd170",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Similarity score between 'cat' and 'bobcat': -0.01531929150223732\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute similarity score between 'cat' and 'bobcat'\n",
+    "similarity_score = model.wv.similarity('cat', 'bobcat')\n",
+    "print(f\"Similarity score between 'cat' and 'bobcat': {similarity_score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "516ad688",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e320a232",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b04fe8e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7417b958",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8933cd1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0df0d763",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99701e40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "aaedca56",
    "metadata": {},
    "source": [
+    "# ZSL\n",
+    "\n",
     "Zero-shot learning (ZSL) is a machine learning paradigm where a model is trained to recognize objects or perform tasks that it has never seen before during training. Instead of relying solely on labeled examples for every possible category, ZSL leverages auxiliary information (such as semantic attributes, descriptions, or relationships) to make predictions about unseen classes."
    ]
   },
@@ -241,18 +446,6 @@
    "metadata": {},
    "source": [
     "# Code for Zero-Shot Learning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e1904932",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# \"Microsoft C++ Build Tools\": https://visualstudio.microsoft.com/visual-cpp-build-tools/"
    ]
   },
   {
