--- a/Zero_shot_Learning/Notebook/20240701_ZSL_(Restart).ipynb
+++ b/Zero_shot_Learning/Notebook/20240701_ZSL_(Restart).ipynb
@@ -948,7 +948,9 @@
    "cell_type": "code",
    "execution_count": 55,
    "id": "fcfa6edd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1159,16 +1161,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0555d6c8",
+   "execution_count": 66,
+   "id": "99701e40",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([3.4403832, 0.       , 4.169318 , 3.7326984, 3.4942498, 0.       ,\n",
+       "        3.4626682, 0.8315648, 3.9869761, 5.0990863, 3.259465 , 3.4965355,\n",
+       "        4.3982306, 0.       , 0.       , 1.1609986], dtype=float32),\n",
+       " 'bobcat')"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence_to_latent[8], custom_sentences[8]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95f8fee2",
+   "metadata": {},
+   "source": [
+    "# RoBERTa"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99701e40",
+   "id": "5e9a15d6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1239,6 +1265,7 @@
     "\n",
     "# Load FastText word vectors\n",
     "fasttext_model = fasttext.load_model('cc.en.300.bin')\n",
+    "\n",
     "# from gensim.models.keyedvectors import KeyedVectors\n",
     "# import gensim.downloader as api\n",
     "# fast_text_vectors = api.load(\"fasttext-wiki-news-subwords-300\")\n",
@@ -1275,6 +1302,8 @@
    "id": "7076fe16",
    "metadata": {},
    "source": [
+    "# Conditional Auto Encoders for Zero-Shot Learning\n",
+    "\n",
     "Conditional Autoencoders (CAEs) are a variant of autoencoders where additional information is used to condition the encoding and decoding processes. This conditioning can help the autoencoder learn more structured and relevant representations based on the context provided by the additional information.\n",
     "\n",
     "### Autoencoders Recap\n",
@@ -1291,11 +1320,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "07a7ac74",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProjectWork\\Basic_Python\\Zero_shot_Learning\\venv_zsl\\lib\\site-packages\\keras\\src\\layers\\normalization\\batch_normalization.py:979: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
+      "\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "94765736/94765736 [==============================] - 10s 0us/step\n",
+      "Epoch 1/50\n",
+      "4/4 [==============================] - 1s 35ms/step - loss: 0.0838\n",
+      "Epoch 2/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0834\n",
+      "Epoch 3/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0833\n",
+      "Epoch 4/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0833\n",
+      "Epoch 5/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0833\n",
+      "Epoch 6/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0832\n",
+      "Epoch 7/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0832\n",
+      "Epoch 8/50\n",
+      "4/4 [==============================] - 0s 30ms/step - loss: 0.0832\n",
+      "Epoch 9/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0832\n",
+      "Epoch 10/50\n",
+      "4/4 [==============================] - 0s 35ms/step - loss: 0.0832\n",
+      "Epoch 11/50\n",
+      "4/4 [==============================] - 0s 34ms/step - loss: 0.0831\n",
+      "Epoch 12/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0831\n",
+      "Epoch 13/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0831\n",
+      "Epoch 14/50\n",
+      "4/4 [==============================] - 0s 41ms/step - loss: 0.0830\n",
+      "Epoch 15/50\n",
+      "4/4 [==============================] - 0s 33ms/step - loss: 0.0830\n",
+      "Epoch 16/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0830\n",
+      "Epoch 17/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0829\n",
+      "Epoch 18/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0829\n",
+      "Epoch 19/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0829\n",
+      "Epoch 20/50\n",
+      "4/4 [==============================] - 0s 30ms/step - loss: 0.0828\n",
+      "Epoch 21/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0828\n",
+      "Epoch 22/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0827\n",
+      "Epoch 23/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0826\n",
+      "Epoch 24/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0826\n",
+      "Epoch 25/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0825\n",
+      "Epoch 26/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0824\n",
+      "Epoch 27/50\n",
+      "4/4 [==============================] - 0s 34ms/step - loss: 0.0824\n",
+      "Epoch 28/50\n",
+      "4/4 [==============================] - 0s 36ms/step - loss: 0.0824\n",
+      "Epoch 29/50\n",
+      "4/4 [==============================] - 0s 30ms/step - loss: 0.0823\n",
+      "Epoch 30/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0822\n",
+      "Epoch 31/50\n",
+      "4/4 [==============================] - 0s 36ms/step - loss: 0.0822\n",
+      "Epoch 32/50\n",
+      "4/4 [==============================] - 0s 38ms/step - loss: 0.0821\n",
+      "Epoch 33/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0820\n",
+      "Epoch 34/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0820\n",
+      "Epoch 35/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0819\n",
+      "Epoch 36/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0818\n",
+      "Epoch 37/50\n",
+      "4/4 [==============================] - 0s 35ms/step - loss: 0.0818\n",
+      "Epoch 38/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0817\n",
+      "Epoch 39/50\n",
+      "4/4 [==============================] - 0s 42ms/step - loss: 0.0817\n",
+      "Epoch 40/50\n",
+      "4/4 [==============================] - 0s 33ms/step - loss: 0.0816\n",
+      "Epoch 41/50\n",
+      "4/4 [==============================] - 0s 35ms/step - loss: 0.0816\n",
+      "Epoch 42/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0816\n",
+      "Epoch 43/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0815\n",
+      "Epoch 44/50\n",
+      "4/4 [==============================] - 0s 34ms/step - loss: 0.0815\n",
+      "Epoch 45/50\n",
+      "4/4 [==============================] - 0s 33ms/step - loss: 0.0815\n",
+      "Epoch 46/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0814\n",
+      "Epoch 47/50\n",
+      "4/4 [==============================] - 0s 33ms/step - loss: 0.0814\n",
+      "Epoch 48/50\n",
+      "4/4 [==============================] - 0s 33ms/step - loss: 0.0813\n",
+      "Epoch 49/50\n",
+      "4/4 [==============================] - 0s 31ms/step - loss: 0.0812\n",
+      "Epoch 50/50\n",
+      "4/4 [==============================] - 0s 32ms/step - loss: 0.0812\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Data cardinality is ambiguous:\n  x sizes: 10, 3\nMake sure all arrays contain the same number of samples.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[62], line 70\u001b[0m\n\u001b[0;32m     68\u001b[0m x_test \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrand(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m2048\u001b[39m)  \u001b[38;5;66;03m# Example test features\u001b[39;00m\n\u001b[0;32m     69\u001b[0m c_test \u001b[38;5;241m=\u001b[39m unseen_attributes[:\u001b[38;5;241m10\u001b[39m]  \u001b[38;5;66;03m# Example unseen class attributes\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m predicted_features \u001b[38;5;241m=\u001b[39m \u001b[43mzero_shot_inference\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28mprint\u001b[39m(predicted_features)\n",
+      "Cell \u001b[1;32mIn[62], line 63\u001b[0m, in \u001b[0;36mzero_shot_inference\u001b[1;34m(features, attributes)\u001b[0m\n\u001b[0;32m     62\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mzero_shot_inference\u001b[39m(features, attributes):\n\u001b[1;32m---> 63\u001b[0m     encoded \u001b[38;5;241m=\u001b[39m \u001b[43mencoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mfeatures\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattributes\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     64\u001b[0m     decoded \u001b[38;5;241m=\u001b[39m decoder\u001b[38;5;241m.\u001b[39mpredict([encoded, attributes])\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m decoded\n",
+      "File \u001b[1;32mC:\\ProjectWork\\Basic_Python\\Zero_shot_Learning\\venv_zsl\\lib\\site-packages\\keras\\src\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32mC:\\ProjectWork\\Basic_Python\\Zero_shot_Learning\\venv_zsl\\lib\\site-packages\\keras\\src\\engine\\data_adapter.py:1960\u001b[0m, in \u001b[0;36m_check_data_cardinality\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m   1953\u001b[0m     msg \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m sizes: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m   1954\u001b[0m         label,\n\u001b[0;32m   1955\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\n\u001b[0;32m   1956\u001b[0m             \u001b[38;5;28mstr\u001b[39m(i\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mnest\u001b[38;5;241m.\u001b[39mflatten(single_data)\n\u001b[0;32m   1957\u001b[0m         ),\n\u001b[0;32m   1958\u001b[0m     )\n\u001b[0;32m   1959\u001b[0m msg \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMake sure all arrays contain the same number of samples.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1960\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n",
+      "\u001b[1;31mValueError\u001b[0m: Data cardinality is ambiguous:\n  x sizes: 10, 3\nMake sure all arrays contain the same number of samples."
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Input, Dense, Flatten, Reshape, concatenate\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.applications import ResNet50\n",
+    "\n",
+    "# Load pre-trained ResNet50 model for feature extraction\n",
+    "base_model = ResNet50(weights='imagenet', include_top=False, pooling='avg')\n",
+    "\n",
+    "# Function to extract features from images\n",
+    "def extract_features(images):\n",
+    "    features = base_model.predict(images)\n",
+    "    return features\n",
+    "\n",
+    "# Example seen and unseen classes\n",
+    "seen_classes = ['cat', 'dog', 'horse']\n",
+    "unseen_classes = ['lion', 'tiger', 'elephant']\n",
+    "\n",
+    "# Example attributes or descriptions (can be one-hot vectors, embeddings, etc.)\n",
+    "# Here using random vectors for simplicity\n",
+    "attribute_dim = 10\n",
+    "seen_attributes = np.random.rand(len(seen_classes), attribute_dim)\n",
+    "unseen_attributes = np.random.rand(len(unseen_classes), attribute_dim)\n",
+    "\n",
+    "# Model parameters\n",
+    "input_shape = (2048,)  # Feature vector size from ResNet50\n",
+    "condition_shape = (attribute_dim,)\n",
+    "latent_dim = 64\n",
+    "\n",
+    "# Encoder\n",
+    "inputs = Input(shape=input_shape)\n",
+    "condition = Input(shape=condition_shape)\n",
+    "x = concatenate([inputs, condition])\n",
+    "x = Dense(256, activation='relu')(x)\n",
+    "x = Dense(latent_dim, activation='relu')(x)\n",
+    "encoder = Model([inputs, condition], x)\n",
+    "\n",
+    "# Decoder\n",
+    "latent_inputs = Input(shape=(latent_dim,))\n",
+    "x = concatenate([latent_inputs, condition])\n",
+    "x = Dense(256, activation='relu')(x)\n",
+    "x = Dense(np.prod(input_shape), activation='sigmoid')(x)\n",
+    "decoder = Model([latent_inputs, condition], x)\n",
+    "\n",
+    "# Autoencoder\n",
+    "autoencoder_inputs = Input(shape=input_shape)\n",
+    "encoded = encoder([autoencoder_inputs, condition])\n",
+    "decoded = decoder([encoded, condition])\n",
+    "autoencoder = Model([autoencoder_inputs, condition], decoded)\n",
+    "\n",
+    "# Compile and train\n",
+    "autoencoder.compile(optimizer='adam', loss='mse')\n",
+    "\n",
+    "# Example training data (use actual features and attributes)\n",
+    "x_train = np.random.rand(1000, 2048)  # Example features\n",
+    "y_train = np.random.rand(1000, 2048)  # Example features for reconstruction\n",
+    "c_train = np.random.rand(1000, attribute_dim)  # Example attributes\n",
+    "\n",
+    "autoencoder.fit([x_train, c_train], y_train, epochs=50, batch_size=256)\n",
+    "\n",
+    "# Example usage for zero-shot inference\n",
+    "def zero_shot_inference(features, attributes):\n",
+    "    encoded = encoder.predict([features, attributes])\n",
+    "    decoded = decoder.predict([encoded, attributes])\n",
+    "    return decoded\n",
+    "\n",
+    "# Example inference\n",
+    "x_test = np.random.rand(10, 2048)  # Example test features\n",
+    "c_test = unseen_attributes[:10]  # Example unseen class attributes\n",
+    "predicted_features = zero_shot_inference(x_test, c_test)\n",
+    "print(predicted_features)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1314,17 +1540,70 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d30cd91",
+   "cell_type": "markdown",
+   "id": "bd30ea1d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Different text similarity algorithms\n",
+    "\n",
+    "1. Cosine similarity\n",
+    "2. Levenshtein distance\n",
+    "3. Jaccard index\n",
+    "4. Euclidean distance\n",
+    "5. Hamming distance\n",
+    "6. Word embeddings\n",
+    "7. Pre-trained language models\n",
+    "\n",
+    "### How to implement text similarity in Python?\n",
+    "\n",
+    "1. Text similarity with NLTK\n",
+    "2. Text similarity with Scikit-Learn\n",
+    "3. Text similarity with BERT\n",
+    "4. Text similarity with RoBERTa\n",
+    "5. Text similarity with FastText\n",
+    "6. Text similarity with PyTorch\n",
+    "\n",
+    "### Similarity Metrics:\n",
+    "\n",
+    "- Experiment with different similarity metrics: Cosine similarity, Euclidean distance, Manhattan distance, etc.\n",
+    "- Use attention mechanisms to weigh the importance of different parts of the text differently.\n",
+    "\n",
+    "### Efficient Indexing and Retrieval:\n",
+    "\n",
+    "- Use efficient data structures like KD-Trees, Ball Trees, or FAISS for fast nearest neighbor search.\n",
+    "- Use approximate nearest neighbor (ANN) techniques to speed up similarity search.\n",
+    "\n",
+    "[Text Similarity In Python](https://spotintelligence.com/2022/12/19/text-similarity-python/) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f165fd2",
+   "metadata": {},
+   "source": [
+    "# Semantic Autoencoder for Zero-Shot Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89a8fd08",
+   "metadata": {},
+   "source": [
+    "# Label-Embedding for Image Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58ceef2b",
+   "metadata": {},
+   "source": [
+    "# KNN"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3bf8bc8",
+   "id": "ef263ea1",
    "metadata": {},
    "outputs": [],
    "source": []
